# DailyDrive

./: .gitignore  Dockerfile.backend  Dockerfile.db  Dockerfile.frontend  docker-compose.yml  jest.config.ts  next.config.mjs  package-lock.json  package.json  pyproject.toml  tsconfig.json
__tests__/: ChoreItem.test.tsx
app/: Alert.tsx  AlertContext.tsx  AnimationContext.tsx  App.css  App.test.tsx  AuthContext.tsx  ChoreChart.tsx  ChoreForm.tsx  ChoreItem.tsx  ChoreList.tsx  ChoreRow.tsx  ColoredText.tsx  ConsistencyContext.tsx  Constants.ts  StatBox.tsx  TimePicker.tsx  UserAvatars.tsx  Utils.ts  WeekdayCell.tsx  globals.css  icon_reducer.tsx  layout.tsx  page.tsx  types.ts
app/chore-chart/: ChoreChart.tsx  ChoreForm.tsx  ChoreItem.tsx  ChoreModal.tsx  ChoreRow.tsx  UserStatsCard.tsx  WeekdayCell.tsx  page.tsx
app/dashboard/: AddMemberForm.tsx  page.tsx  (+4 more)
backend/: .env  alembic.ini  auth.py  chore_repository.py  database.py  dependencies.py  main.py  models.py  postgres_storage.py  pydantic_utils.py  pyproject.toml  repository.py  reward_calculator.py  reward_repository.py  settings.py  state.py  storage.py  user_repository.py
backend/alembic/: env.py
backend/alembic/versions/: 2024_05_22_1029-0cc679c4428d_.py  2024_05_24_1649-15084b3fef5d_initial_migration.py  2024_05_27_1446-af41d5fa6c14_adding_chore_history_table.py  2024_05_27_1508-0acc0dd80f8c_changing_date_time_types_to_be_time_.py  2024_05_27_1955-bc9113720459_adding_the_rewards_table.py  2024_05_28_1131-4f0315430fe3_adding_extra_field_to_rewards.py  2024_07_01_1645-f97dc49569d7_add_user_family_table.py
(+7 files in other folders)
