[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Handy dandy app to keep mah kids accountable"
authors = ["Aleksandr V Yeganov"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.30"
pydantic = "^2.7.1"
python-dotenv = "^1.0.1"
fastapi-users = {extras = ["sqlalchemy"], version = "^13.0.0"}
aiosqlite = "^0.20.0"
asyncpg = "^0.29.0"
pylint = "^3.2.2"
password-validator = "^1.0"
pyjwt = "^2.8.0"
alembic = "^1.13.1"
pydantic-settings = "^2.2.1"
pytest = "^8.2.1"
option = "^2.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
